--- a/DCGAN.ipynb
+++ b/DCGAN.ipynb
@@ -45,9 +45,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
+          "height": 153
         },
-        "outputId": "f688b404-b30c-4a84-a213-790a7fe7baf0"
+        "outputId": "bf02f0bb-6781-472d-fc76-a02a65a64272"
       },
       "source": [
         "from google.colab import drive\n",
@@ -61,13 +61,27 @@
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['README.md',\n",
+              " '.gitignore',\n",
+              " 'fashion-MNIST-idx3-ubyte',\n",
+              " 'DCGAN.pdf',\n",
+              " '.ipynb_checkpoints',\n",
+              " '.git',\n",
+              " 'DCGAN.ipynb']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
         }
       ]
     },
@@ -81,9 +95,10 @@
       "source": [
         "import torch\n",
         "import torch.nn as nn\n",
-        "from torch.utils.data import Dataset\n",
+        "from torch.utils.data import Dataset, DataLoader\n",
         "import torchvision\n",
-        "import torchvision.transforms as transforms"
+        "import torchvision.transforms as transforms\n",
+        "import cv2"
       ],
       "execution_count": 0,
       "outputs": []
@@ -104,8 +119,11 @@
         "scrolled": true,
         "id": "dbVoFBSVQXXl",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "ca2693ce-4db8-4f0a-c276-fb9c47aeab30"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 282
+        },
+        "outputId": "b33ed560-010e-44bf-87ba-1e917468aec2"
       },
       "source": [
         "import numpy as np\n",
@@ -118,7 +136,7 @@
         "plt.imshow(imagearray[4], cmap=plt.cm.binary)\n",
         "print(imagearray.shape)"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,40 +171,35 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "Dqug6HwOQXXt",
-        "colab_type": "text"
+        "id": "trvTdcjISygy",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "572d294f-9f1a-4517-9869-c0a604b05865"
       },
       "source": [
-        "## Making discriminator:"
+        "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+        "device"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "device(type='cuda')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "HhaUs7SjQXXu",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "CHANNEL = 1"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "wt1ZW9LjQXX1",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "nn.Conv2d()"
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -198,7 +211,7 @@
       "source": [
         "class Discriminator(nn.Module):    \n",
         "    def __init__(self, channels, features):\n",
-        "        super(Descriminator, self).__init__()\n",
+        "        super().__init__()\n",
         "        self.net = nn.Sequential(\n",
         "            nn.Conv2d(in_channels= channels, out_channels = features, kernel_size = 4, stride = 2, padding = 1),\n",
         "            nn.LeakyReLU(0.2),\n",
@@ -219,23 +232,9 @@
         "        x = self.net(x)\n",
         "        return x\n",
         "\n",
-        "'''\n",
-        "nn.ConvTranspose2d(\n",
-        "    in_channels,\n",
-        "    out_channels,\n",
-        "    kernel_size,\n",
-        "    stride=1,\n",
-        "    padding=0,\n",
-        "    output_padding=0,\n",
-        "    groups=1,\n",
-        "    bias=True,\n",
-        "    dilation=1,\n",
-        "    padding_mode='zeros',\n",
-        ")\n",
-        "'''\n",
         "class Generator(nn.Module):\n",
         "    def __init__(self, noise_size, channels, features):\n",
-        "        super(Generator, self).__init__()\n",
+        "        super().__init__()\n",
         "        self.net = nn.Sequential(\n",
         "            nn.ConvTranspose2d(in_channels = noise_size, out_channels = features*16, kernel_size = 4, stride = 1, padding = 0),\n",
         "            nn.BatchNorm2d(features * 16),\n",
@@ -260,24 +259,15 @@
         "    def forward(self, x):\n",
         "        return self.net(x)\n",
         "    \n",
-        "    \n",
-        "### TESTING FORWARD PASS IN DESCRIMINATOR:\n",
-        "# img_channels = 3\n",
-        "# img_size = 64\n",
-        "# features = 4\n",
-        "# batch_size = 5\n",
-        "# rand = torch.rand((batch_size, img_channels, img_size, img_size)).float()\n",
-        "# nn = Discriminator(img_channels, features)\n",
-        "# c = nn.forward(rand)\n",
         "\n",
-        "### TESTING FORWARD PASS IN GENERATOR:\n",
-        "# noise_size = 100\n",
-        "# output_img_channels = 3\n",
-        "# batch_size = 5\n",
-        "# features = 4\n",
-        "# rand = torch.rand((batch_size, noise_size, 1, 1)).float()\n",
-        "# nn = Generator(noise_size, output_img_channels , features)\n",
-        "# c = nn.forward(rand)"
+        "batch_size = 64\n",
+        "img_size = 64\n",
+        "img_channels = 1\n",
+        "channels_noise = 256\n",
+        "features = 16\n",
+        "\n",
+        "disc = Discriminator(img_channels, features).float().to(device)\n",
+        "gen = Generator(channels_noise, img_channels, features).to(device)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -286,6 +276,117 @@
       "cell_type": "code",
       "metadata": {
         "id": "AgrYVYlnQXYB",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "## TESTING FORWARD PASS IN DESCRIMINATOR:\n",
+        "rand = torch.rand((batch_size, img_channels, img_size, img_size)).float().to(device)\n",
+        "c = disc.forward(rand)\n",
+        "print(c.shape, c)\n",
+        "\n",
+        "## TESTING FORWARD PASS IN GENERATOR:\n",
+        "rand = torch.rand((batch_size, channels_noise, 1, 1)).float().to(device)\n",
+        "c = gen.forward(rand)\n",
+        "print(c)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WwbnJW52Tstb",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Let's start training:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TpmaToxOUPRj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        },
+        "outputId": "1651dbb7-a317-4628-9247-cdc5a173587d"
+      },
+      "source": [
+        "lr = 0.0002\n",
+        "epochs = 10\n",
+        "\n",
+        "batch_size = 64\n",
+        "img_size = 64\n",
+        "img_channels = 1\n",
+        "channels_noise = 256\n",
+        "features = 16\n",
+        "\n",
+        "class Resize():\n",
+        "    def __init__(self, resize_dim = 64):\n",
+        "        self.resize_dim = 64\n",
+        "        \n",
+        "    def __call__(self, img):\n",
+        "        return cv2.resize(img, (self.resize_dim, self.resize_dim))\n",
+        "\n",
+        "class FashnionDataset(Dataset):\n",
+        "  def __init__(self, file = 'fashion-MNIST-idx3-ubyte', transform = None):\n",
+        "    self.file = file\n",
+        "    self.transform = transform\n",
+        "    self.img_array = idx2numpy.convert_from_file(self.file)\n",
+        "\n",
+        "  def __len__(self):\n",
+        "    return len(self.img_array)\n",
+        "\n",
+        "  def __getitem__(self, idx):\n",
+        "    img = self.img_array[idx]\n",
+        "    # img = torch.tensor(img).to(device)\n",
+        "\n",
+        "    if self.transform is not None:\n",
+        "      img = self.transform(img)\n",
+        "\n",
+        "    if not torch.is_tensor(img):\n",
+        "      img = torch.tensor(img).to(device)\n",
+        "\n",
+        "    return img.to(device)\n",
+        "\n",
+        "my_transforms = transforms.Compose([\n",
+        "    Resize(img_size),\n",
+        "    transforms.ToTensor(),\n",
+        "    transforms.Normalize((0.5,),(0.5,)),\n",
+        "    ])\n",
+        "\n",
+        "ds = FashnionDataset(transform = my_transforms)\n",
+        "loader = DataLoader(ds, batch_size, shuffle = True)"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[-1., -1., -1.,  ..., -1., -1., -1.],\n",
+              "         [-1., -1., -1.,  ..., -1., -1., -1.],\n",
+              "         [-1., -1., -1.,  ..., -1., -1., -1.],\n",
+              "         ...,\n",
+              "         [-1., -1., -1.,  ..., -1., -1., -1.],\n",
+              "         [-1., -1., -1.,  ..., -1., -1., -1.],\n",
+              "         [-1., -1., -1.,  ..., -1., -1., -1.]]], device='cuda:0')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RnEoLqKjYIz1",
         "colab_type": "code",
         "colab": {}
       },
